--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                             <option value="2">English, USD</option>
                             <option value="3">English, USD</option>
                         </select>
-                        <button class="main-btn-blank ms-3 mb-md-0 mb-3">Refer a friend</button>
-                        <a href="login.html" class="main-btn ms-3">Log in</a>
+                        <button class="main-btn-blank ms-3 mb-md-0 mb-3 w-auto">Refer a friend</button>
+                        <a href="login.html" class="main-btn ms-3 w-auto">Log in</a>
                     </div>
                 </div>
             </div>
@@ -867,7 +867,7 @@
                         </p>
                     </div>
                     <div class="col-lg-6 d-flex justify-content-center">
-                        <img src="assets/images/testimonials.png" alt="" class="mx-auto">
+                        <img src="assets/images/testimonials.png" alt="" class="mx-auto img-fluid">
                     </div>
 
                 </div>
