--- a/index.html
+++ b/index.html
@@ -615,10 +615,10 @@
                 <div class="row">
                     <div class="col-lg-12 mb-lg-4 mb-3 pb-lg-2">
                         <h2 class="heading ">
-                            Make the world your comfort zone
+                            How ProTutor works
                         </h2>
                         <p class="main-text2 text-center">
-                            Speak naturally with professional online tutors from 185 countries
+                            Learn online with the world's best tutors
                         </p>
                     </div>
 
@@ -676,11 +676,10 @@
                         <div class="d-flex justify-content-between align-items center flex-md-row flex-column">
                             <div>
                                 <h2 class="heading text-md-start">
-                                    Make the world your comfort zone
+                                    Meet our top rated tutors
                                 </h2>
                                 <p class="main-text2 text-md-start text-center ">
-                                    Tutors on our platform are not just native English speakers, they're qualified professionals
-                                </p>
+                                    Tutors on our platform are not just native English speakers, they're qualified professionals                                </p>
                             </div>
                             <div>
                                 <button class="main-btn">Find Tutor</button>
