--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Protutor</title>
 </head>
 
-<body class="pb-5">
+<body class="">
 
     <header>
         <nav class="navbar navbar-expand-xl  navbar-dark  top-navbar-div">
@@ -1184,6 +1184,14 @@
                         </select>
                         </li>
                     </ul>
+                </div>
+            </div>
+            <div class="row mt-4 pt-4">
+                <div class="col-lg-12 py-4" style="border-top: 2px dashed #E1E1E1;">
+                    <p class="footer-text mb-0 pb-0  text-center" style="color: rgba(44, 44, 44, 0.50);
+                    ">
+                        Copyright © 2023 all right reserved ProTutor
+                    </p>
                 </div>
             </div>
         </div>
