--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 mb-lg-0 mb-4 d-flex flex-column align-items-md-start align-items-center">
-                    <img src="assets/images/image 2.png" alt="" >
+                    <img src="assets/images/image 2.png" alt="">
                     <p class="footer text">
                         We take care of your health with regular and fun exercise
                     </p>
@@ -1141,7 +1141,7 @@
                         </li>
                     </ul>
                 </div>
- 
+
                 <div class="col-lg-2 col-md-6 d-flex flex-column align-items-md-start align-items-center">
                     <h2 class="mb-3">Help</h2>
                     <ul class="ms-0 ps-0 d-flex flex-column align-items-md-start align-items-center">
@@ -1173,15 +1173,14 @@
                             <a href=""></a>
                         </li>
                         <li class="mt-4 pt-1">
-                        <select class="form-select  mb-md-0 mb-3" style="border-radius: 6px;
+                            <select class="form-select  mb-md-0 mb-3" style="border-radius: 6px;
                         border: 1px solid rgba(255, 108, 11, 0.20); color: rgba(44, 44, 44, 0.80);
-                        ;"
-                            aria-label="Default select example ">
-                            <option selected>English, USD</option>
-                            <option value="1">English, EUR</option>
-                            <option value="2">English, USD</option>
-                            <option value="3">English, USD</option>
-                        </select>
+                        ;" aria-label="Default select example ">
+                                <option selected>English, USD</option>
+                                <option value="1">English, EUR</option>
+                                <option value="2">English, USD</option>
+                                <option value="3">English, USD</option>
+                            </select>
                         </li>
                     </ul>
                 </div>
