--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0 top-navbar d-flex">
                         <li class="nav-item">
-                            <a class="nav-link active-nav" href="#">Home</a>
+                            <a class="nav-link active-nav" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Find Tutors</a>
@@ -41,7 +41,7 @@
                             <a class="nav-link" href="#">Enterprise</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Become a tutor</a>
+                            <a class="nav-link" href="become-tutor.html">Become a tutor</a>
                         </li>
                     </ul>
                     <div class="d-flex align-items-md-center flex-md-row flex-column">
@@ -1128,7 +1128,7 @@
                     <h2 class="mb-3">About</h2>
                     <ul class="ms-0 ps-0 d-flex flex-column align-items-md-start align-items-center">
                         <li>
-                            <a href="">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
                             <a href="">Find tutor</a>
@@ -1137,7 +1137,7 @@
                             <a href="">Enterprise</a>
                         </li>
                         <li>
-                            <a href="">Become a tutor</a>
+                            <a href="become-tutor.html">Become a tutor</a>
                         </li>
                     </ul>
                 </div>
