--- a/become-tutor.html
+++ b/become-tutor.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <!-- font awsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -113,8 +116,8 @@
                                 </div>
                                 <div class="mt-3 mb-1 pt-1 password">
                                     <label>Password</label><br>
-                                    <input type="password" placeholder="Enter your password">
-                                    <i class="bi bi-eye"></i>
+                                    <input type="password" placeholder="Enter your password" id="id_password"> 
+                                    <i class="far fa-eye"  id="togglePassword"></i>
                                 </div>
                                 <button class="mt-4 mb-2">Sign up with email</button>
                                 <hr class="mt-4 header-line">
@@ -546,6 +549,17 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <script>
+        // Login
+        const togglePassword = document.querySelector('#togglePassword');
+        const password = document.querySelector('#id_password');
+
+        togglePassword.addEventListener('click', function (e) {
+            const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+            password.setAttribute('type', type);
+            this.classList.toggle('fa-eye-slash');
+        });
+    </script>
 </body>
 
 </html>
