--- a/become-tutor.html
+++ b/become-tutor.html
@@ -359,11 +359,11 @@
                             </div>
 
                             <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingThree">
+                                <h2 class="accordion-header" id="heading4">
                                     <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseThree">Can other info be added to an invoice?</button>
+                                        data-bs-target="#collapse4">Can other info be added to an invoice?</button>
                                 </h2>
-                                <div id="collapseThree" class="accordion-collapse collapse"
+                                <div id="collapse4" class="accordion-collapse collapse"
                                     data-bs-parent="#myAccordion">
                                     <div class="card-body">
                                         <p class="main-text2  text-gray mt-3" style="color: rgba(44, 44, 44, 0.80);
@@ -380,11 +380,11 @@
                             </div>
 
                             <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingThree">
+                                <h2 class="accordion-header" id="heading5">
                                     <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseThree">How does billing work?</button>
+                                        data-bs-target="#collapse5">How does billing work?</button>
                                 </h2>
-                                <div id="collapseThree" class="accordion-collapse collapse"
+                                <div id="collapse5" class="accordion-collapse collapse"
                                     data-bs-parent="#myAccordion">
                                     <div class="card-body">
                                         <p class="main-text2  text-gray mt-3" style="color: rgba(44, 44, 44, 0.80);
