--- a/index.html
+++ b/index.html
@@ -908,79 +908,129 @@
         </section>
 
 
-        <section class="testimonials">
+           <section class="testimonials">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 order-lg-1 order-2">
-                        <h2 class="heading text-lg-start text-center">
-                            Student Testimonials
+                    <div class="col-lg-12">
+                        <h2 class="heading text-md-start">
+                            Find an Online English Teacher to Help You Master English
                         </h2>
-
-                        <div id="carouselExampleIndicators" class="carousel slide testimonial-slider"
-                            data-bs-ride="carousel">
-                            <div class="carousel-indicators">
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                    class="active" aria-current="true" aria-label="Slide 1"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                    aria-label="Slide 2"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                                    aria-label="Slide 3"></button>
-                            </div>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <p class="testimonial-text  text-lg-start text-center">
-                                        <img src="assets/images/comma.svg" alt="">
-                                        In my experience all the teachers are very supportive and friendly and the
-                                        placement process has been very smooth. it’s also no issue talk about whatever
-                                        you want to Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-                                        placeat fugiat earum?
-
-                                    </p>
-                                    <h4>Sherina Munir - Designer</h4>
-                                </div>
-                                <div class="carousel-item">
-                                    <p class="testimonial-text  text-lg-start text-center">
-                                        <img src="assets/images/comma.svg" alt="">
-                                        In my experience all the teachers are very supportive and friendly and the
-                                        placement process has been very smooth. it’s also no issue talk about whatever
-                                        you want to Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-                                        placeat fugiat earum?
-
-                                    </p>
-                                    <h4>Sherina Munir - Designer</h4>
-                                </div>
-                                <div class="carousel-item">
-                                    <p class="testimonial-text  text-lg-start text-center">
-                                        <img src="assets/images/comma.svg" alt="">
-                                        In my experience all the teachers are very supportive and friendly and the
-                                        placement process has been very smooth. it’s also no issue talk about whatever
-                                        you want to Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-                                        placeat fugiat earum?
-
-                                    </p>
-                                    <h4>Sherina Munir - Designer</h4>
-                                </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button"
-                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button"
-                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
-                        </div>
                     </div>
-                    <div class="col-lg-6 d-flex justify-content-center order-lg-2 order-1 mb-lg-0 mb-4">
-                        <img src="assets/images/testimonials.png" alt="" class="mx-auto img-fluid">
+                    <div class="col-lg-6 pe-lg-5 ">
+
+
+                        <div class="accordion mt-3 faq-accordian" id="myAccordion">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingOne">
+                                    <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseOne">Is there a free trial available?</button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#myAccordion">
+                                    <div class="card-body">
+                                        <p class="main-text2  text-gray mt-3" style="color: rgba(44, 44, 44, 0.80);
+                                        ;">
+                                            Live tutoring software enables tutors to teach students in real time
+                                            utilizing interactive
+                                            video conferencing features. As a Student or Parent, you can browse through
+                                            Tutor profiles
+                                            and their subject expertise, and thereafter book live lesson.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingTwo">
+                                    <button type="button" class="accordion-button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseTwo">Can I change my plan later?</button>
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse show"
+                                    data-bs-parent="#myAccordion">
+                                    <div class="card-body">
+                                        <p class="main-text2  text-gray mt-3" style="color: rgba(44, 44, 44, 0.80);
+                                        ;">
+                                            Live tutoring software enables tutors to teach students in real time
+                                            utilizing interactive
+                                            video conferencing features. As a Student or Parent, you can browse through
+                                            Tutor profiles
+                                            and their subject expertise, and thereafter book live lesson.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingThree">
+                                    <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseThree">What is your cancellation policy?</button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse"
+                                    data-bs-parent="#myAccordion">
+                                    <div class="card-body">
+                                        <p class="main-text2  text-gray mt-3" style="color: rgba(44, 44, 44, 0.80);
+                                        ;">
+                                            Live tutoring software enables tutors to teach students in real time
+                                            utilizing interactive
+                                            video conferencing features. As a Student or Parent, you can browse through
+                                            Tutor profiles
+                                            and their subject expertise, and thereafter book live lesson.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="heading4">
+                                    <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse"
+                                        data-bs-target="#collapse4">Can other info be added to an invoice?</button>
+                                </h2>
+                                <div id="collapse4" class="accordion-collapse collapse"
+                                    data-bs-parent="#myAccordion">
+                                    <div class="card-body">
+                                        <p class="main-text2  text-gray mt-3" style="color: rgba(44, 44, 44, 0.80);
+                                        ;">
+                                            Live tutoring software enables tutors to teach students in real time
+                                            utilizing interactive
+                                            video conferencing features. As a Student or Parent, you can browse through
+                                            Tutor profiles
+                                            and their subject expertise, and thereafter book live lesson.
+                                        </p>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="heading5">
+                                    <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse"
+                                        data-bs-target="#collapse5">How does billing work?</button>
+                                </h2>
+                                <div id="collapse5" class="accordion-collapse collapse"
+                                    data-bs-parent="#myAccordion">
+                                    <div class="card-body">
+                                        <p class="main-text2  text-gray mt-3" style="color: rgba(44, 44, 44, 0.80);
+                                        ;">
+                                            Live tutoring software enables tutors to teach students in real time
+                                            utilizing interactive
+                                            video conferencing features. As a Student or Parent, you can browse through
+                                            Tutor profiles
+                                            and their subject expertise, and thereafter book live lesson.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+
+                    </div>
+                    <div class="col-lg-6">
+
                     </div>
 
                 </div>
             </div>
         </section>
-
 
         <section class="language-training">
             <div class="container">
