--- a/profile.html
+++ b/profile.html
@@ -28,10 +28,11 @@
 <body class="">
 
     <header>
-        <nav class="navbar navbar-expand-xl  navbar-light  top-navbar-div">
+        <nav class="navbar navbar-expand-xl  navbar-light  top-navbar-div light-nav" >
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="assets/images/logo-dark.png" alt="">
+                    <img src="assets/images/logo-dark.png" alt="" class="dark-logo">
+                    <img src="assets/images/image 2.png" alt="" class="light-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
