--- a/profile.html
+++ b/profile.html
@@ -31,10 +31,10 @@
         <nav class="navbar navbar-expand-xl  navbar-light  top-navbar-div light-nav">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="assets/images/logo-dark.png" alt="" class="dark-logo">
-                    <img src="assets/images/image 2.png" alt="" class="light-logo">
+                    <img id="dark-logo" src="assets/images/logo-dark.png" alt="" class="dark-logo">
+                    <img id="light-logo" src="assets/images/image 2.png" alt="" class="light-logo">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <button id="toggle-logo" class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
