--- a/profile.html
+++ b/profile.html
@@ -83,9 +83,16 @@
                             <div class="profile-content mt-lg-0 mt-3">
                                 <h3>Hanna Baptista</h3>
                                 <div
-                                    class="d-flex align-items-lg-center mt-3 flex-lg-row flex-column align-items-start">
-                                    <h2 class="text-primary ps-0">English teacher</h2>
-                                    <h2>10 years of experience</h2>
+                                    class="d-flex align-items-lg-center mt-3 flex-wrap align-items-start">
+                                    <h2 class="text-primary me-2 ps-0">English teacher</h2>
+                                    <h2 class="text-primary me-2 ps-0">English teacher</h2>
+                                    <h2 class="text-primary me-2 ps-0">English teacher</h2>
+                                    <h2 class="text-primary me-2 ps-0">English teacher</h2>
+                                    <h2 class="text-primary me-2 ps-0">English teacher</h2>
+                                    
+                                </div>
+                                <div class="d-flex align-items-center mt-3">
+                                    <h2 class="ps-0">10 years of experience</h2>
                                     <h2 class=" border-end-0"><img src="assets/images/flag.png" alt=""
                                             class="me-2">United State</h2>
                                 </div>
@@ -719,7 +726,17 @@
                             </div>
                             <button class="main-btn-sm w-100">Book a trial lesson</button>
                             <div class="d-flex align-items-center mt-3">
-                                <img src="assets/images/heart.svg" alt="" class="me-2">
+                                <div class="like me-3">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40"
+                                        fill="none">
+                                        <path
+                                            d="M0 20C0 8.95431 8.95431 0 20 0C31.0457 0 40 8.95431 40 20C40 31.0457 31.0457 40 20 40C8.95431 40 0 31.0457 0 20Z"
+                                            fill="#FF6C0B" fill-opacity="0.15" />
+                                        <path class="like-fill "
+                                            d="M18.6356 12.9894L18.6468 13.0001L18.6583 13.0104C19.0273 13.3404 19.505 13.5228 20 13.5228C20.495 13.5228 20.9727 13.3404 21.3417 13.0104L21.3535 12.9998L21.365 12.9888C22.2116 12.1818 23.8293 11 26 11C27.5801 11 28.7855 11.6184 29.6199 12.6803C30.4752 13.7688 31 15.4045 31 17.5C31 18.7417 30.4893 20.1505 29.5891 21.6176C28.696 23.073 27.467 24.5082 26.1492 25.7806C24.8327 27.0516 23.4532 28.1356 22.2806 28.895C21.6935 29.2752 21.1737 29.5641 20.7514 29.754C20.297 29.9584 20.0599 30 20 30C19.9401 30 19.703 29.9584 19.2486 29.754C18.8263 29.5641 18.3065 29.2752 17.7194 28.895C16.5468 28.1356 15.1673 27.0516 13.8508 25.7806C12.533 24.5082 11.304 23.073 10.4109 21.6176C9.51066 20.1505 9 18.7417 9 17.5C9 15.4045 9.52485 13.7688 10.3801 12.6803C11.2145 11.6184 12.4199 11 14 11C16.169 11 17.7883 12.183 18.6356 12.9894Z"
+                                            stroke="#FF6C0B" stroke-width="2" />
+                                    </svg>
+                                </div>
                                 <button class="main-btn-blank-sm w-100">Send message</button>
                             </div>
                             <div class="d-flex align-items-center mt-3">
