--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"
         integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="stylesheet" href="https://fullcalendar.io/releases/fullcalendar/3.10.0/fullcalendar.min.css">
     <!-- css -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
@@ -82,14 +82,13 @@
                             </div>
                             <div class="profile-content mt-lg-0 mt-3">
                                 <h3>Hanna Baptista</h3>
-                                <div
-                                    class="d-flex align-items-lg-center mt-3 flex-wrap align-items-start">
+                                <div class="d-flex align-items-lg-center mt-3 flex-wrap align-items-start">
                                     <h2 class="text-primary me-2 ps-0">English teacher</h2>
                                     <h2 class="text-primary me-2 ps-0">English teacher</h2>
                                     <h2 class="text-primary me-2 ps-0">English teacher</h2>
                                     <h2 class="text-primary me-2 ps-0">English teacher</h2>
                                     <h2 class="text-primary me-2 ps-0">English teacher</h2>
-                                    
+
                                 </div>
                                 <div class="d-flex align-items-center mt-3">
                                     <h2 class="ps-0">10 years of experience</h2>
@@ -210,7 +209,7 @@
                                     <h1 class="heading">Schedule</h1>
                                     <p>Choose the time for your first lesson. The timings are displayed in your local
                                         timezone.</p>
-                                    <div class="d-flex justify-content-between align-items-center flex-wrap">
+                                    <!-- <div class="d-flex justify-content-between align-items-center flex-wrap">
                                         <div class="d-flex align-items-center mb-4 me-3">
                                             <div class="left-arrow">
                                                 <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
@@ -404,9 +403,32 @@
 
                                             </tbody>
                                         </table>
-                                    </div>
+                                    </div> -->
+                                    <div class="tabtable-responsive">
+                                        <div class="fulltab-table">
+                                        <div id='top' class="">
 
+                                            <div style='float:left'>
+
+                                                <select id='timezone-selector'>
+                                                    <option value='' selected>Select Time zone</option>
+                                                    <option value='local'>local</option>
+                                                    <option value='UTC'>UTC</option>
+                                                </select>
+                                            </div>
+
+                                            <div style='float:right'>
+                                                <span id='loading'>loading...</span>
+
+                                            </div>
+
+                                            <div style='clear:both'></div>
+                                        </div>
+
+                                        <div id='calendar'></div>
+                                    </div>
                                 </div>
+                            </div>
 
                                 <div id="Reviews" class="tabcontent">
                                     <h1 class="heading mb-3">What students say</h1>
@@ -1200,7 +1222,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+  
     <script src="assets/js/app.js"></script>
     <script>
         function openCity(evt, cityName) {
@@ -1282,6 +1304,10 @@
         });
 
     </script>
+      <script src="https://fullcalendar.io/releases/fullcalendar/3.10.0/lib/moment.min.js"></script>
+      <script src="https://fullcalendar.io/releases/fullcalendar/3.10.0/lib/jquery.min.js"></script>
+      <script src="https://fullcalendar.io/releases/fullcalendar/3.10.0/fullcalendar.min.js"></script>
+      <script src="assets/js/full-calendar.js"></script>
 </body>
 
 </html>
